--- a/views/classA.ejs
+++ b/views/classA.ejs
@@ -8,8 +8,8 @@
         <div class="content">
             <form id="add-students-form">
                 <input type="text" name="name" placeholder="輸入 Student's name">
-                <input type="text" name="gender" placeholder="輸入 Student's gender">
-                <input type="text" name="age" placeholder="輸入 Student's age">
+                <input type="text" gender="gender" placeholder="輸入 Student's gender">
+                <input type="text" age="age" placeholder="輸入 Student's age">
                 <button> Add a student </button> 
             </form>
             <table id="stu-table" cellpadding="10" border="1" width="100%">
