--- a/views/default.ejs
+++ b/views/default.ejs
@@ -9,8 +9,13 @@
         <h1><%= title %></h1>    
         <ul>  
             <% for(let i=0; i<users.length; i++) {%>  
-                <li><%= users[i] %></li>  
+                <li class = "ls"><%= users[i] %></li>  
             <% } %>  
-        </ul>  
+        </ul>
+        <style>
+            .ls{
+                font-size : 50px;
+            }
+        </style>  
     </body>  
 </html> 
