--- a/views/default.ejs
+++ b/views/default.ejs
@@ -9,13 +9,8 @@
         <h1><%= title %></h1>    
         <ul>  
             <% for(let i=0; i<users.length; i++) {%>  
-                <li class = "ls"><%= users[i] %></li>  
+                <li style = "font-size: 50px;"><%= users[i] %></li>  
             <% } %>  
         </ul>
-        <style>
-            .ls{
-                font-size : 50px;
-            }
-        </style>  
     </body>  
 </html> 
